nextcloud/nextcloud-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud 
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - thedoodleproject.org
    secretName: tls-secret
  rules:
  - host: thedoodleproject.org
    http:
      paths:
      - path: /
        backend:
          serviceName: nextcloud-nextcloud
          servicePort: 80
